Capitalize text & fix letter-spacing

--- a/other/style/style.css
+++ b/other/style/style.css
@@ -267,7 +267,7 @@ body {
     font-style: normal;
     font-weight: 500;
     line-height: 181.4%; /* 43.536px */
-    letter-spacing: 1.68px;
+    letter-spacing: 0.5px;
 }
 
 
@@ -276,7 +276,7 @@ body {
     font-style: normal;
     font-weight: 600 !important;
     line-height: 160% !important;
-    letter-spacing: 2.24px;
+    letter-spacing: 0.8px;
 }
 
 #contactUs .info{
@@ -598,7 +598,7 @@ body {
 
 .meal-item-image-container .meal-image{
     max-width: 100vw;
-    max-height: 100vh;
+    max-height: 80vh;
     display: none;
     transition: opacity 1s;
     opacity: 0;
@@ -717,7 +717,7 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 5.6px;
+    letter-spacing: 0.6px;
 }
 
 #event-detail-host{
@@ -727,7 +727,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    letter-spacing: 2.8px;
+    letter-spacing: 0.6px;
 }
 
 #event-detail-description, #event-detail-location, #event-detail-time, #event-detail-pricing{
@@ -737,7 +737,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 180%; /* 25.2px */
-    letter-spacing: 1.4px;
+    letter-spacing: 0.6px;
 }
 
 #event-detail-images{
@@ -835,7 +835,7 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 3.2px;
+    letter-spacing: 0.6px;
     color: #000;
 }
 
@@ -950,7 +950,7 @@ body {
         font-style: normal;
         font-weight: 500;
         line-height: 180%;
-        letter-spacing: 1.68px;
+        letter-spacing: 0.5px;
     }
     
     #contactUs .content .text .quote > *{
@@ -958,7 +958,7 @@ body {
         font-style: normal;
         font-weight: 600 !important;
         line-height: 160% !important;
-        letter-spacing: 2.24px;
+        letter-spacing: 0.6px;
     }
 
     #contactUs .info{
